--- a/custom video player/index.html
+++ b/custom video player/index.html
@@ -24,7 +24,7 @@
         <div class="video__content">
           <div class="video__volume">
             <button class="btn btn--volume">
-              <svg class="icon">
+              <svg class="icon volume-icon">
                 <use xlink:href="img/icons.svg#icon-volume"></use>
               </svg>
             </button>
