--- a/custom video player/index.html
+++ b/custom video player/index.html
@@ -101,7 +101,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Form%20Validation"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/custom%20video%20player"
         target="_blank"
         class="footer__link"
         >busari shakrullahi</a
