Add link path to footer

--- a/How to manipulate DOM and using of some array method forEach, filter, map, sort and reduce/index.html
+++ b/How to manipulate DOM and using of some array method forEach, filter, map, sort and reduce/index.html
@@ -46,7 +46,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Form%20Validation"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/How%20to%20manipulate%20DOM%20and%20using%20of%20some%20array%20method%20forEach%2C%20filter%2C%20map%2C%20sort%20and%20reduce"
         target="_blank"
         class="footer__link"
         >busari shakrullahi</a
