Added error message to the dom

--- a/How to manipulate DOM and using of some array method forEach, filter, map, sort and reduce/index.html
+++ b/How to manipulate DOM and using of some array method forEach, filter, map, sort and reduce/index.html
@@ -41,6 +41,12 @@
           <p class="user__text">Total Wealth</p>
           <h3 class="heading--2">$1,652,525.00</h3>
         </div> -->
+        <!-- <div class="error">
+          <svg class="error__icon">
+            <use xlink:href="img/icon.svg#icon-alert-triangle"></use>
+          </svg>
+          <p class="error__text">Thereis an error ocurr</p>
+        </div> -->
       </section>
     </main>
     <footer class="footer">
