change the url in footer link

--- a/Find the hidden words/index.html
+++ b/Find the hidden words/index.html
@@ -88,7 +88,7 @@
       <footer class="footer">
         Design by
         <a
-          href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Form%20Validation"
+          href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Find%20the%20hidden%20words"
           target="_blank"
           class="footer__link"
           >busari shakrullahi</a
