--- a/Meal Finder/index.html
+++ b/Meal Finder/index.html
@@ -71,7 +71,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
