footer link added

--- a/Audio player/index.html
+++ b/Audio player/index.html
@@ -60,7 +60,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Currency%20converter"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Audio%20player"
         target="_blank"
         class="footer__link"
         >busari shakrullahi</a
