--- a/Audio player/index.html
+++ b/Audio player/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 maximum-scale=1
+      "
+    />
     <title>Custom audio player</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -44,7 +48,7 @@
             </button>
           </div>
         </div>
-        <audio src="music/sample-9s.mp3" controls class="audio"></audio>
+        <audio src="music/sample-9s.mp3" class="audio"></audio>
         <div class="music__progressbar-container hidden">
           <div class="music__progressbar-content">
             <div class="music__progressbar-details">
