--- a/Infinite scrolling/index.html
+++ b/Infinite scrolling/index.html
@@ -65,7 +65,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Infinite%20scrolling"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
