--- a/Typing Game/index.html
+++ b/Typing Game/index.html
@@ -13,12 +13,14 @@
   <body>
     <div class="tpying-game">
       <div class="typing-game__stage">
-        <label class="typing-game__stage-title">Difficulty</label>
-        <select class="typing-game__category" id="">
-          <option class="typing-game__value" value="easy">Easy</option>
-          <option class="typing-game__value" value="medium">Medium</option>
-          <option class="typing-game__value" value="hard">Hard</option>
-        </select>
+        <div class="typing-game__stage-detials">
+          <label class="typing-game__stage-title">Difficulty</label>
+          <select class="typing-game__category" id="">
+            <option class="typing-game__value" value="easy">Easy</option>
+            <option class="typing-game__value" value="medium">Medium</option>
+            <option class="typing-game__value" value="hard">Hard</option>
+          </select>
+        </div>
       </div>
       <main class="card">
         <div class="card__details card__front">
@@ -26,31 +28,33 @@
             <h1 class="heading--1">👩‍💻 speed typer 👩‍💻</h1>
           </div>
           <div class="card__time-out">
-            <p class="card__time-left">
-              Time left <span class="time-out">10s</span>
+            <p class="card__text card__time-left">
+              Time left: <span class="time-out">00:10s</span>
             </p>
-            <p class="card__score">Score <span class="score">10</span></p>
+            <p class="card__text card__score">
+              Score: <span class="score">0</span>
+            </p>
           </div>
           <div class="typing-game__description">
             <p class="paragraphy">Type the following:</p>
-            <h2 class="heading--2 typing-game__words">ronaldo</h2>
+            <h2 class="heading--2 typing-game__words"></h2>
             <form class="form">
               <input
                 type="text"
                 class="form__control form__input"
-                placeholder="Type the word here"
+                placeholder="Type the word here...."
               />
             </form>
           </div>
         </div>
-        <div class="card__details card__back">
-          <h2 class="heading--2">Time ran out</h2>
-          <p class="paragraphy">
-            Your final score is <span class="highscore">10</span>
+        <div class="card__details card__back hidden">
+          <h2 class="heading--2 card__heading">Time ran out</h2>
+          <p class="card__paragraphy">
+            Your final score is <span class="highscore">0</span>
           </p>
-        </div>
-        <div class="btn-container">
-          <button class="btn btn--reload">reload</button>
+          <div class="btn-container">
+            <button class="btn btn--reload">reload</button>
+          </div>
         </div>
       </main>
       <button class="btn btn--hide">Hide game stage</button>
@@ -58,7 +62,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Typing%20Game"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
