--- a/Speech Text Reader/index.html
+++ b/Speech Text Reader/index.html
@@ -86,7 +86,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Typing%20Game"
+        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Speech%20Text%20Reader"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
