--- a/Memory card/index.html
+++ b/Memory card/index.html
@@ -111,7 +111,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Speech%20Text%20Reader"
+        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Memory%20card"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
