Add error message

--- a/Memory card/index.html
+++ b/Memory card/index.html
@@ -108,6 +108,9 @@
         </div>
       </section>
     </main>
+    <div class="error-message hide-error-message">
+      <p class="message">make sure the value is not empty</p>
+    </div>
     <footer class="footer">
       Design by
       <a
