--- a/Relaxer App/index.html
+++ b/Relaxer App/index.html
@@ -22,7 +22,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Relaxer%20App"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
