Change footer link

--- a/Count down timer/index.html
+++ b/Count down timer/index.html
@@ -48,7 +48,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Count%20down%20timer"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
