change footer link and height value

--- a/Quiz Application/index.html
+++ b/Quiz Application/index.html
@@ -254,7 +254,7 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Quiz%20Application"
         target="_blank"
         class="footer__link"
         >Busari Shakrullahi</a
