--- a/Audio player/index.html
+++ b/Audio player/index.html
@@ -64,10 +64,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Audio%20player"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Audio%20player"
         target="_blank"
         class="footer__link"
-        >busari shakrullahi</a
+        >luka janllari</a
       >
     </footer>
   </body>
