--- a/Count down timer/index.html
+++ b/Count down timer/index.html
@@ -48,10 +48,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Count%20down%20timer"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Count%20down%20timer"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
