--- a/Currency converter/index.html
+++ b/Currency converter/index.html
@@ -77,10 +77,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Currency%20converter"
+        href="https://github.com/lukamaria/Top-100-Projects/edit/main/Currency%20converter"
         target="_blank"
         class="footer__link"
-        >busari shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
