--- a/Expense Tracker/index.html
+++ b/Expense Tracker/index.html
@@ -111,10 +111,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Expense%20Tracker"
+        href="https://github.com/lukamaria/Top-100-Projects/edit/main/Expense%20Tracker"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
