--- a/Find the hidden words/index.html
+++ b/Find the hidden words/index.html
@@ -87,10 +87,10 @@
       <footer class="footer">
         Design by
         <a
-          href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Find%20the%20hidden%20words"
+          href="https://github.com/lukamaria/Top-100-Projects/blob/main/Find%20the%20hidden%20words"
           target="_blank"
           class="footer__link"
-          >busari shakrullahi</a
+          >Luka Janllari</a
         >
       </footer>
       <div class="modal hidden">
