--- a/Form Validation/index.html
+++ b/Form Validation/index.html
@@ -140,10 +140,10 @@
       <footer class="footer">
         Design by
         <a
-          href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Form%20Validation"
+          href="https://github.com/lukamaria/Top-100-Projects/blob/main/Form%20Validation"
           target="_blank"
           class="footer__link"
-          >busari shakrullahi</a
+          >Luka Janllari</a
         >
       </footer>
     </div>
