--- a/Infinite scrolling/index.html
+++ b/Infinite scrolling/index.html
@@ -65,10 +65,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Infinite%20scrolling"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Infinite%20scrolling"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
