--- a/Meal Finder/index.html
+++ b/Meal Finder/index.html
@@ -74,10 +74,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Meal%20Finder"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Meal%20Finder"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
