--- a/Memory card/index.html
+++ b/Memory card/index.html
@@ -114,10 +114,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Memory%20card"
+        href="https://github.com/lukamaria/Top-100-Projects/edit/main/Memory%20card"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
