--- a/Memory card/index.html
+++ b/Memory card/index.html
@@ -45,7 +45,7 @@
                   Flip
                 </p>
                 <p class="card__text card__answer">
-                  My name is busari shakrullahi
+                  My name is Luka Janllari
                 </p>
               </article>
             </div> -->
