--- a/Quiz Application/index.html
+++ b/Quiz Application/index.html
@@ -254,10 +254,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Quiz%20Application"
+        href="https://github.com/lukamaria/Top-100-Projects/edit/main/Quiz%20Application"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
