--- a/Relaxer App/index.html
+++ b/Relaxer App/index.html
@@ -22,10 +22,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Relaxer%20App"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Relaxer%20App"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
