--- a/Sortable list using drag and drop API/index.html
+++ b/Sortable list using drag and drop API/index.html
@@ -34,10 +34,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/CyberScript007/Top-100-Projects/tree/main/Sortable%20list%20using%20drag%20and%20drop%20API"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Sortable%20list%20using%20drag%20and%20drop%20API"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
