--- a/Speech Text Reader/index.html
+++ b/Speech Text Reader/index.html
@@ -86,10 +86,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Speech%20Text%20Reader"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/Speech%20Text%20Reader"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
