--- a/Todo App/index.html
+++ b/Todo App/index.html
@@ -122,10 +122,10 @@
         <footer class="footer">
           Design by
           <a
-            href="https://github.com/busarishakrullahi/Top-100-Projects"
+            href="https://github.com/lukamaria/Top-100-Projects/blob/main/Todo%20App"
             target="_blank"
             class="footer__link"
-            >Busari Shakrullahi</a
+            >Luka Janllari</a
           >
         </footer>
       </section>
