--- a/Typing Game/index.html
+++ b/Typing Game/index.html
@@ -62,10 +62,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/Typing%20Game"
+        href="https://github.com/lukamaria/Top-100-Projects/edit/main/Typing%20Game"
         target="_blank"
         class="footer__link"
-        >Busari Shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
