--- a/custom video player/index.html
+++ b/custom video player/index.html
@@ -101,10 +101,10 @@
     <footer class="footer">
       Design by
       <a
-        href="https://github.com/busarishakrullahi/Top-100-Projects/tree/main/custom%20video%20player"
+        href="https://github.com/lukamaria/Top-100-Projects/blob/main/custom%20video%20player"
         target="_blank"
         class="footer__link"
-        >busari shakrullahi</a
+        >Luka Janllari</a
       >
     </footer>
   </body>
